# complexitty

./: 404.html  ChangeLog.md  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: code-checks.yaml
changelog/: index.html
configuration/: index.html
docs/source/: index.md
license/: index.html
search/: search_index.json
src/complexitty/: __main__.py  complexitty.py
src/complexitty/commands/: __init__.py  main.py  navigation.py  plotting.py
src/complexitty/data/: config.py
src/complexitty/mandelbrot/: calculator.py  colouring.py  widget.py
src/complexitty/providers/: main.py
src/complexitty/screens/: main.py
