[project]
name = "complexitty"
version = "0.0.1"
description = "Coming soon"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "textual>=3.1.0",
    "textual-enhanced>=0.11.0",
    "textual-canvas>=0.3.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
# https://github.com/astral-sh/rye/issues/1446
requires = ["hatchling==1.26.3", "hatch-vcs"]
# requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=4.2.0",
    "codespell>=2.4.1",
    "mypy>=1.15.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/complexitty"]

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]
